	* Breaking API so that we now hide internal data structures.

2008-02-06 Marcelo Jimenez <mroberto(at)users.sourceforge.net>
	* Rewrote Peter Hartley's patch to include a new extra header field in
	FileInfo.

*******************************************************************************
Version 1.6.9
*******************************************************************************

2010-11-05 Fabrice Fontaine <fabrice.fontaine(at)orange-ftgroup.com>

	Removing unused NUM_COPY variable.

	Previously, NUM_COPY was used in ssdp_device.c to send multiple copies 
	of each advertisements but also multiple replies to each M-SEARCH
	request. As sending multiple replies is not compliant with HTTPU/MU
	spec, NUM_COPY has been set to 1 in an older patch. However, as this
	variable is not needed and has been replaced with SSDP_COPY, it has
	been removed.

2010-11-05 Fabrice Fontaine <fabrice.fontaine(at)orange-ftgroup.com>

	Use SSDP_COPY to send multiple SSDP advertisements.

	Currently, SSDP_COPY is used only to send multiple M-SEARCH requests (in
	ssdp_ctrlpt.c). With this patch, SSDP_COPY is also used to send multiple
	copies of each advertisements packets (in ssdp_device.c).

2010-11-01 Carl Benson <carl.benson(at)windriver.com>

	Fix for Android build.

	I had to do some modifications myself though, because the Android
	build system insists on having a file named "util.h" taking precedence
	in its include path, libupnp gets confused because of the same filename
	in upnp/src/inc/util.h

*******************************************************************************
Version 1.6.8
*******************************************************************************

2010-10-20 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	Fix a long date memory leak in webserver.c:StrStr().

2010-10-19 Marcelo Roberto Jimenez <mroberto(at)users.sourceforge.net>

	Bug fix in select of miniserver.c
	
	Fix a bug in miniserver.c, in which maxMiniSock was wrongly declared as